--- a/src/components/Sidebar/components/Legend/styles.css
+++ b/src/components/Sidebar/components/Legend/styles.css
@@ -1,4 +1,8 @@
 .legend {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  margin-bottom: 20px;
   background-color: white;
   border-radius: 5px;
   padding: 15px;
