Add page to comparison of districts

--- a/src/components/CollapsibleSection/styles.css
+++ b/src/components/CollapsibleSection/styles.css
@@ -90,7 +90,7 @@
 }
 
 .Collapsible__trigger:after {
-  content: url(../../../../../../assets/chevron.svg);
+  content: url(../../assets/chevron.svg);
   transition: transform 300ms; 
   margin-left: auto;
   transform: rotateZ(180deg); 
