--- a/src/components/Sidebar/components/ComparisonDetails/styles.css
+++ b/src/components/Sidebar/components/ComparisonDetails/styles.css
@@ -46,5 +46,14 @@
 }
 
 .comparisonHeaderIcon {
+  align-items: center;
+  display: flex;
   margin-right: 15px;
+}
+
+.miniMap {
+  width: 300px;
+  height: 300px;
+  margin-left: -20px;
+  margin-top: 5px;
 }
