--- a/src/components/Sidebar/components/SearchBar/styles.css
+++ b/src/components/Sidebar/components/SearchBar/styles.css
@@ -38,6 +38,7 @@
     font-family: "Roboto", sans-serif; /* Override assembly.css */
     font-size: 15px;
     outline: none;
+    width: 100%;
 }
 
 .searchContainer .searchField button {
