--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #1f3349;
+  font-weight: 400;
 }
 
 code {
