--- a/src/components/Sidebar/components/MinimizerSidebarButton/styles.css
+++ b/src/components/Sidebar/components/MinimizerSidebarButton/styles.css
@@ -16,6 +16,7 @@
   /* Scratch/Standard Drop Shadow */
   
   border-radius: 0px 5px 5px 0px;
+  box-shadow: 0 2px 4px rgba(0,0,0,.25),0 -1px 0 rgba(0,0,0,.1);
 }
 
 .toggleButtonClose {
