--- a/src/components/Sidebar/components/RegionDetails/styles.css
+++ b/src/components/Sidebar/components/RegionDetails/styles.css
@@ -4,7 +4,7 @@
 
 .regionDetails {
   position: absolute;
-  height: 100%;
+  height: 100vh;
   width: 320px;
   z-index: 3;
   bottom: 0;
@@ -15,9 +15,15 @@
   box-shadow: 0 2px 4px rgba(0,0,0,.25),0 -1px 0 rgba(0,0,0,.1);
 }
 
+.regionDetailsContent {
+  height: 90%;
+  overflow-y: scroll;
+}
+
 .closeIcon {
   cursor: "pointer";
   color: rgb(153, 153, 153)
+  #4a7929
 }
 
 .comparisonList {
