Adjust Header in the comparion mode

--- a/src/components/ComparisonView/components/GridView/styles.css
+++ b/src/components/ComparisonView/components/GridView/styles.css
@@ -3,6 +3,7 @@
   height: max-content;
   width: 100%;
   max-width: 1110px;
+  padding-top: 80px;
 }
 
 /* .grid-view .Collapsible {
@@ -49,10 +50,12 @@
   min-height: 110px;
   margin-bottom: 20px;
 }
+
 .grid-container .grid-item:nth-child(4n) .grid-item-body {
   border-right: none;
 }
-.grid-container .grid-item .comparison > label {
+
+.grid-container .grid-item .comparison>label {
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
