--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   color: #1f3349;
   font-weight: 400;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 code {
