update select sistema de recomendação

--- a/src/components/Modal/Recommendation/recommendation.css
+++ b/src/components/Modal/Recommendation/recommendation.css
@@ -107,3 +107,9 @@
     font-weight: bold;
     margin-bottom: 10px;
   }
+
+.custom-select {
+    max-width: 580px; /* Defina a largura máxima desejada para o select */
+    white-space: normal; /* Permite que o conteúdo quebre a linha */
+    word-wrap: break-word; /* Quebra as palavras longas, se necessário */
+  }
