--- a/atlas/styles/index.css
+++ b/atlas/styles/index.css
@@ -366,6 +366,7 @@ p {
 /*============================
   Section Title Three CSS
 ==============================*/
+
 .section-title-three {
   text-align: center;
   max-width: 550px;
@@ -949,11 +950,10 @@ only screen and (min-width: 1400px) {
 
 .header-ten .header-image {
   float: right;
-  height: 500px;
-  width: 500px;
+  height: 600px;
+  width: 600px;
   display: block;
-  border-radius: 50%;
-  background-image: url("assets/images/header/04.jpg");
+  /* border-radius: 50%; */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -1821,34 +1821,51 @@ only screen and (min-width: 1400px) {
 
 /*===== call action four =====*/
 .call-action-four {
-  background-color: var(--primary);
+  position: relative;
   padding: 100px 0;
-  opacity: 50%;
   background-image: url("../assets/images/top_down_city.png");
   background-size: cover;
   background-position: center;
 }
 
+.call-action-four::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: var(--primary);
+  opacity: 30%;
+}
+
+.call-action-four,
+.call-action-four * {
+  color: var(--white);
+  /* Set the color for all elements within .call-action-four */
+}
+
+.call-action-four h2,
+.call-action-four p,
+.call-action-four input {
+  color: inherit;
+  /* Inherit the color from the parent */
+}
+
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .call-action-four {
-    padding: 80px 0 80px 0;
+    padding: 80px 0;
   }
 }
 
 @media (max-width: 767px) {
   .call-action-four {
-    padding: 60px 0 60px 0;
+    padding: 60px 0;
   }
 }
 
 .call-action-four .call-action-content .action-title {
   font-weight: 600;
-  color: var(--white);
-}
-
-.call-action-four .call-action-content .text {
-  color: var(--white);
-  margin-top: 16px;
 }
 
 .call-action-four .call-action-form {
@@ -1864,7 +1881,8 @@ only screen and (min-width: 1400px) {
   background: none;
   padding: 0 25px;
   border-radius: 50px;
-  color: var(--white);
+  color: inherit;
+  /* Inherit the color from the parent */
 }
 
 @media (max-width: 767px) {
@@ -1928,153 +1946,6 @@ only screen and (min-width: 1400px) {
   .call-action-four .call-action-form .action-btn .primary-btn {
     width: auto;
   }
-}
-
-/*===== TESTIMONIAL STYLE FOUR =====*/
-.testimonial-6 {
-  background-color: var(--white);
-  position: relative;
-  padding-bottom: 100px;
-  padding-top: 100px;
-  overflow: hidden;
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .testimonial-6 {
-    padding: 80px 0 80px 0;
-  }
-}
-
-@media (max-width: 767px) {
-  .testimonial-6 {
-    padding: 60px 0 60px 0;
-  }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991px),
-(max-width: 767px) {
-  .testimonial-6 {
-    padding-bottom: 120px;
-  }
-}
-
-.testimonial-6 .tns-nav {
-  text-align: center;
-  position: absolute;
-  bottom: 80px;
-  transform: translateX(-50%);
-  width: 100%;
-  left: 50%;
-  z-index: 9;
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .testimonial-6 .tns-nav {
-    bottom: 50px;
-  }
-}
-
-@media (max-width: 767px) {
-  .testimonial-6 .tns-nav {
-    bottom: 40px;
-  }
-}
-
-.testimonial-6 .tns-nav button {
-  height: 6px;
-  width: 14px;
-  background-color: var(--primary);
-  opacity: 0.3;
-  border-radius: 5px;
-  display: inline-block;
-  border: none;
-  margin: 0px 5px;
-  transition: all 0.4s ease;
-}
-
-.testimonial-6 .tns-nav button:hover {
-  opacity: 1;
-}
-
-.testimonial-6 .tns-nav button.tns-nav-active {
-  opacity: 1;
-  width: 25px;
-}
-
-.testimonial-6 .testimonial-patern1 {
-  width: 200px;
-  position: absolute;
-  left: -100px;
-  bottom: -90px;
-}
-
-@media (max-width: 767px) {
-  .testimonial-6 .testimonial-patern1 {
-    display: none;
-  }
-}
-
-.testimonial-6 .testimonial-patern2 {
-  width: 200px;
-  position: absolute;
-  right: -100px;
-  top: -90px;
-}
-
-@media (max-width: 767px) {
-  .testimonial-6 .testimonial-patern2 {
-    display: none;
-  }
-}
-
-.testimonial-6 .single-testimonial {
-  text-align: center;
-  padding: 0px 80px 40px 80px;
-}
-
-@media (max-width: 767px) {
-  .testimonial-6 .single-testimonial {
-    padding: 0px 10px 20px 20px;
-  }
-}
-
-.testimonial-6 .single-testimonial .text .brand-icon {
-  margin-bottom: 30px;
-}
-
-.testimonial-6 .single-testimonial .text .brand-icon img {
-  width: 140px;
-}
-
-.testimonial-6 .single-testimonial .text p {
-  color: var(--dark-3);
-}
-
-.testimonial-6 .single-testimonial .author {
-  margin-top: 30px;
-  display: inline-block;
-  position: relative;
-}
-
-.testimonial-6 .single-testimonial .author img {
-  height: 70px;
-  width: 70px;
-  border-radius: 50%;
-  display: inline-block;
-}
-
-.testimonial-6 .single-testimonial .author .name {
-  font-size: 15px;
-  font-weight: 500;
-  color: var(--black);
-  display: block;
-  margin-top: 15px;
-}
-
-.testimonial-6 .single-testimonial .author .name span {
-  color: var(--dark-3);
-  display: block;
-  margin-top: 4px;
 }
 
 /* ===== Buttons Css ===== */
@@ -2388,6 +2259,13 @@ only screen and (min-width: 768px) and (max-width: 991px) {
 
 .brand-area .bg-color-white .brand-list::before {
   background: var(--light-1);
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 /*===== FOOTER FIVE =====*/
