--- a/src/components/InformationsBar/RecommendationCard/recommendationcard.css
+++ b/src/components/InformationsBar/RecommendationCard/recommendationcard.css
@@ -1,5 +1,5 @@
 .custom-button {
-    background-color: rgb(61, 190, 255);
+    background-color: #0A74A6;
     color: white;
     padding: 10px 20px;
     border: none;
